overflow fix. board menu redesign

--- a/frontend/src/assets/styles/cmps/app-header.scss
+++ b/frontend/src/assets/styles/cmps/app-header.scss
@@ -1,13 +1,9 @@
 .app-header-regular {
     display: flex;
     justify-content: space-between;
-
-
-
     background-color: hsla(0, 0%, 0%, 0.16);
     background-color: var(--dynamic-background);
     border-bottom: 1px solid var(--dynamic-text-transparent);
-
     align-items: center;
 
     .main-nav {
@@ -88,8 +84,8 @@
         display: none;
     }
 
-    @media (max-width: 420px) {
-        height: 50px;
+    @include for-mobile-layout {
+        height: rem(60px);
 
         &.workspace-mobail {
             display: flex;
@@ -116,15 +112,18 @@
 
         .mobail-menu-btn {
             display: block;
-            margin-right: 11px;
+            margin-right: rem(14px);
+            font-size: rem(20px);
         }
 
         .board-name-mobail {
             display: flex;
-            align-items: center;
-            padding-left: 11px;
-            gap: 14px;
+            line-height: em(14px);
+            padding-left: 14px;
+            gap: 40px;
             color: white;
+            font-size: rem(20px);
+
         }
 
         .mobail-menu {
@@ -137,47 +136,76 @@
             opacity: 0;
             background-color: #f4f5f7;
             max-height: 0px;
-            position: absolute;
+            position: fixed;
             transition: .6s ease-in, opacity .25s;
             z-index: 100;
 
             &.mobail-menu-open {
                 min-height: 100vh;
                 opacity: 1;
+                font-size: rem(20px);
+
+                .member-native-icon {
+                    display: none;
+                }
             }
 
             .board-header {
                 color: black;
                 display: flex;
+                align-items: center;
                 box-shadow: 0px 1px 0 rgb(215 215 215 / 86%);
-                background-color: rgb(226 226 226);
-                display: flex;
-                background-color: unset;
+                background-color: var(--dynamic-background);
+                color: var(--dynamic-text);
+                padding: rem(13px) rem(34px) rem(13px) rem(14px);
 
                 span {
-                    margin: auto
+                    margin-inline: auto;
                 }
 
             }
 
             .icons-container {
-                height: 30px;
                 display: flex;
-                justify-content: space-evenly;
+                justify-content: space-between;
                 align-items: center;
-                padding: 22px 30px;
+                padding: 17px 22px;
+                box-shadow: inset 0 0 0 2px var(--ds-border-input, #dfe1e6);
+                margin-bottom: rem(14px);
 
                 >* {
                     border: none;
                     border-radius: 4px;
-                    padding: 3px 16px;
-                    background-color: rgb(223 223 223);
+                    padding: 8px 20px;
+                    font-size: rem(22px);
+                    background-color: #ffff;
+                    border: 1px solid hsl(0, 0%, 80%);
+                    line-height: 17px;
                 }
             }
 
             .members-container {
-                display: flex;
-                background-color: rgb(223 223 223);
+                padding: 14px 14px;
+                color: $clr_font_blue;
+                background-color: #ffffff;
+                font-weight: 600;
+                font-size: rem(18px);
+                box-shadow:  2px 1px 4px 0px rgb(9 30 66 / 25%);
+
+                .title-container{
+                    margin-bottom: 14px;
+                    .title{
+                        padding-inline-start: 11px;
+                    }
+                }
+
+                .mambers-icons{
+                    margin-bottom: 24px;
+                    img{
+                        width: 40px;
+                        height: 40px;
+                    }
+                }
 
                 .icon.container {
                     display: flex;
@@ -185,17 +213,19 @@
                     margin: 4px 14px;
                 }
 
-                .members-contant-container{
-                    color: black;
-                    display: flex;
-                    flex-direction: column;
+                .members-contant-container {
                     flex-grow: 1;
-                    >* {
-                        box-shadow: 0px 1px 0 rgb(215 215 215 / 86%);
-                    }
-                    .btn-add{
-                        @include button-filled(#0079bf, #fff);
-                    }
+                    padding: 0 29px;
+                    margin-bottom: 6px
+                }
+
+                .btn-add {
+                    @include button-filled(#0079bf, #fff);
+                    width: 100%;
+                    padding-block: 8px;
+                    font-size: 16px;
+                    font-weight: 500;
+                    letter-spacing: 1px;
                 }
             }
         }
